# fastsse

./: .gitignore  Cargo.toml  README.md  RELEASE.md  SECURITY.md  deny.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  production_readiness.yml
.github/workflows/: ci.yml  release.yml
crates/fastsse/: Cargo.toml
crates/fastsse/benches/: codec.rs
crates/fastsse/examples/: roundtrip.rs
crates/fastsse/src/: encoder.rs  error.rs  event.rs  lib.rs
crates/fastsse/src/decoder/: mod.rs  process.rs
crates/fastsse/tests/: codec.rs  spec_decode.rs  spec_encode.rs
crates/fastsse/tests/snapshots/: codec__encode_controls.snap  codec__encode_event.snap
crates/fastsse_node/: Cargo.toml  build.rs
crates/fastsse_node/src/: lib.rs
crates/fastsse_wasm/: Cargo.toml
crates/fastsse_wasm/src/: lib.rs
npm/fastsse_node/: README.md  index.d.ts  index.js  index.mjs  package.json
scripts/: audit-npm-licenses.mjs  crate-version-published.mjs  node-package-pack-check.mjs  node-package-smoke.mjs  package-crates.mjs  release.mjs  sync-wasm-package.mjs  verify-release-tag.mjs  wasm-package-pack-check.mjs  wasm-smoke.mjs
