[workspace]
members = ["crates/fastsse", "crates/fastsse_node", "crates/fastsse_wasm"]
default-members = ["crates/fastsse", "crates/fastsse_node"]
resolver = "3"

[workspace.package]
authors = ["Mates Inc."]
categories = ["encoding", "parser-implementations", "web-programming"]
edition = "2024"
homepage = "https://github.com/matesedu/fastsse"
keywords = ["eventsource", "parser", "server-sent-events", "sse", "streaming"]
license = "GPL-3.0-or-later"
repository = "https://github.com/matesedu/fastsse"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
compact_str = "0.9.0"
criterion = "0.8.2"
fastsse = { path = "crates/fastsse", version = "=0.1.0" }
insta = "1.46.3"
js-sys = "0.3.91"
memchr = "2.8.0"
napi = "3.8.3"
napi-build = "2.3.1"
napi-derive = "3.5.6"
wasm-bindgen = "0.2.114"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
