[package]
name = "fastsse"
description = "Low-allocation Server-Sent Events encoder and incremental decoder."
authors.workspace = true
categories.workspace = true
documentation = "https://docs.rs/fastsse"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
compact_str.workspace = true
memchr.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true

[[bench]]
harness = false
name = "codec"

[lints]
workspace = true
