[package]
name = "fastsse-wasm"
description = "Browser bindings for fastsse built with wasm-bindgen."
authors.workspace = true
categories.workspace = true
documentation = "https://docs.rs/fastsse-wasm"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastsse.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
